question add show

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,8 @@
 
 .bg-red{ background-color: red;}
 
+#questionslist{ color:red}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
